deployment-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node-server
        image: soumyajit606/node-web-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
