be-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service-springboot
spec:
  selector:
    app: springboot-api-container
  ports:
    - protocol: TCP
      port: 8024
      targetPort: 8080
