service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-springboot
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8080
